exports[`test OpenGraphAction.js 1`] = `
"// @flow

var OpenGraphValueContainer = require(\'./OpenGraphValueContainer.js\');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
var OpenGraphValueContainer = require(\"./OpenGraphValueContainer.js\");
"
`;

exports[`test OpenGraphObject.js 1`] = `
"// @flow

var OpenGraphValueContainer = require(\'./OpenGraphValueContainer.js\');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
var OpenGraphValueContainer = require(\"./OpenGraphValueContainer.js\");
"
`;

exports[`test OpenGraphValueContainer.js 1`] = `
"// @flow

var OpenGraphObject = require(\'./OpenGraphObject.js\');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
var OpenGraphObject = require(\"./OpenGraphObject.js\");
"
`;
